{
    "version": 1,
    "name": "CardAction",
    "maps": [
        {
            "name": "CardControl",
            "id": "a69a8e37-c70a-435d-8711-f3c6d7a0b835",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "8de1e15a-9478-48d3-a10e-25f3a91d76c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "UnSelect",
                    "type": "Button",
                    "id": "c2978513-b979-473f-8b4e-96fbe3bd30e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c22a560d-a193-4c1b-a31b-3baf72b80229",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14e087e2-c6e2-452e-9085-6b9017aff605",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10894c6c-f7b0-4af1-a645-61b11eb308cd",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93a7952c-a766-4072-a52f-b5b066670079",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2903898c-aeff-47ae-b27b-a1a1b91b8a05",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "141ac961-599f-4dab-b4e0-37fc47b1fa80",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93ba9fb7-58e5-463f-951e-5925d993859d",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}